--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+margin: 0;
+padding: 0;
+ box-sizing: border-box;
+}
+ul{
+  list-style: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+a{
+  text-decoration: none;
+}
+
+.container{
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 0 110px;
+ 
 }
